2010-01-17  Peter Bloomfield

	* src/main-window.c: report NetworkManager state on start-up;
	skip POP3 checks when disconnected; do not disconnect local IMAP
	server when NetworkManager is disconnected.

2010-01-17  Pawel Salek

	* libbalsa/imap/imap-tls.c: check also the length when matching
	the host name vs the one in the certificate.

2010-01-17  Peter Bloomfield

	* src/main-window.c: close the new-mail notification instead of
	showing it with a 1 millisecond time-out.

2010-01-16  Peter Bloomfield

	* src/balsa-app.h: new member NMState nm_state.
	* src/main-window.c: use it to save NetworkManager state;
	connect or disconnect IMAP on changes to/from
	NM_STATE_CONNECTED.

2010-01-16  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_save_temporary): make
	temporary file read-only.

2010-01-15  Pawel Salek

	* libbalsa/imap/imap_compress.c:
	* libbalsa/imap/siobuf.c: complete the compression error handling.

2010-01-14  Peter Bloomfield

	* libbalsa/html.h: new methods for printing.
	* libbalsa/html.c (libbalsa_html_can_print),
	(libbalsa_html_print): implement them.
	* src/balsa-mime-widget-text.c (bmwt_populate_popup_menu),
	(bmwt_populate_popup_cb): use them.

2010-01-14  Peter Bloomfield

	* libbalsa/html.h: new methods for printing.
	* libbalsa/html.c (libbalsa_html_can_print),
	(libbalsa_html_print): implement them.
	* src/balsa-mime-widget-text.c (bmwt_populate_popup_menu),
	(bmwt_populate_popup_cb): use them.

2010-01-14  Peter Bloomfield

	* configure.in: require NetworkManager version 0.7.
	* src/main-window.c: use GObject-based API instead of deprecated
	older API.

2010-01-12  Pawel Salek

	* libbalsa/html.c: fix libbalsa_html_popup_menu_widget() arg list.

2010-01-12  Peter Bloomfield

	* libbalsa/html.h: new public method to retrieve the real HTML
	widget.
	* libbalsa/html.c (libbalsa_html_popup_menu_widget): ditto.
	* src/balsa-mime-widget-text.c (bmwt_populate_popup_menu),
	(balsa_gtk_html_popup), (bmwt_populate_popup_cb),