@@ -1,5 +1,10 @@
 2010-01-17  Peter Bloomfield
 
+	* src/balsa-app.c (update_timer): use g_timeout_add_seconds,
+	save the world.
+
+2010-01-17  Peter Bloomfield
+
 	* src/main-window.c: report NetworkManager state on start-up;
 	skip POP3 checks when disconnected; do not disconnect local IMAP
 	server when NetworkManager is disconnected.
